force-app/main/default/objects/Donation__c/Donation__c.object-meta.xml
<CustomObject>
    <description>Main object of Donations application. Used to store the details about donation request.</description>
    <label>Donation</label>
    <nameField>
        <label>Donation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Donations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>