force-app/main/default/objects/Donation__c/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>CSE Country Lead</fullName>
            </value>
            <value>
                <fullName>BU Head</fullName>
            </value>
            <value>
                <fullName>Head PH-Med</fullName>
                <label>Medical Head</label>
            </value>
            <value>
                <fullName>Business Partner Compliance</fullName>
                <label>Compliance Business Partner</label>
            </value>
            <value>
                <fullName>SBR Bayer Vital</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Final Approval</fullName>
                <isActive>false</isActive>
                <label>Final Approval</label>
            </value>
            <value>
                <fullName>Pending with Business Partner Compliance</fullName>
                <isActive>false</isActive>
                <label>Pending with Business Partner Compliance</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>