force-app/main/default/objects/Donation__c/fields/Bank_Reference__c.field-meta.xml
<CustomField>
    <fullName>Bank_Reference__c</fullName>
    <label>Bank Reference</label>
    <length>20</length>
    <type>Text</type>
</CustomField>