force-app/main/default/objects/Donation__c/fields/BIC__c.field-meta.xml
<CustomField>
    <fullName>BIC__c</fullName>
    <label>BIC</label>
    <length>15</length>
    <type>Text</type>
</CustomField>