force-app/main/default/objects/Donation__c/fields/Business_Affiliations__c.field-meta.xml
<CustomField>
    <fullName>Business_Affiliations__c</fullName>
    <label>Business Affiliations</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>