force-app/main/default/objects/Donation__c/fields/Business_Affiliations_Description__c.field-meta.xml
<CustomField>
    <fullName>Business_Affiliations_Description__c</fullName>
    <defaultValue>&quot;Ist der Empfänger ein Kunde oder Lieferant von Bayer oder unterhält er eine andere Geschäftsbeziehung zu Bayer? Wenn ja, bestätigen Sie bitte, dass kein Zusammenhang mit einer geschäftlichen Transaktion besteht (z. B. ein versteckter Rabatt usw.) und dass sich aus der Annahme der Spende keine Verpflichtungen des Kunden oder Lieferanten gegenüber Bayer oder einem Dritten in der künftigen Geschäftsbeziehung ergeben.&quot;</defaultValue>
    <label>Business Affiliations</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>