force-app/main/default/objects/Donation__c/fields/Business_Partner_Compliance__c.field-meta.xml
<CustomField>
    <fullName>Business_Partner_Compliance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Partner Compliance</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DonationsP5ad</relationshipName>
    <type>Lookup</type>
</CustomField>