force-app/main/default/objects/Donation__c/fields/Company_Code__c.field-meta.xml
<CustomField>
    <fullName>Company_Code__c</fullName>
    <formula>Requestor__r.CompanyCode__c</formula>
    <label>Company Code</label>
    <type>Text</type>
</CustomField>