force-app/main/default/objects/Donation__c/fields/Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email__c</fullName>
    <label>Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>