force-app/main/default/objects/Donation__c/fields/Contact_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_First_Name__c</fullName>
    <label>Contact First Name</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>