force-app/main/default/objects/Donation__c/fields/Contact_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Last_Name__c</fullName>
    <label>Contact Last Name</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>