force-app/main/default/objects/Donation__c/fields/Contract_and_Payment__c.field-meta.xml
<CustomField>
    <fullName>Contract_and_Payment__c</fullName>
    <label>Contract and Payment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>