force-app/main/default/objects/Donation__c/fields/Contract_and_Payment_Description__c.field-meta.xml
<CustomField>
    <fullName>Contract_and_Payment_Description__c</fullName>
    <defaultValue>&quot;Does the recipient request unusual or suspicious contract terms, procedures or payment arrangements, e. g. payment in cash or cash equivalents, payment to another entity/individual than the recipient? If yes, check by Compliance Manager required.&quot;</defaultValue>
    <label>Contract and Payment Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>