force-app/main/default/objects/Donation__c/fields/Crystal_AID__c.field-meta.xml
<CustomField>
    <fullName>Crystal_AID__c</fullName>
    <inlineHelpText>Crystal Activity ID is assigned by the system</inlineHelpText>
    <label>Crystal AID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>