force-app/main/default/objects/Donation__c/fields/CWID__c.field-meta.xml
<CustomField>
    <fullName>CWID__c</fullName>
    <formula>Requestor__r.FederationIdentifier</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CWID</label>
    <type>Text</type>
</CustomField>