force-app/main/default/objects/Donation__c/fields/Document_No__c.field-meta.xml
<CustomField>
    <fullName>Document_No__c</fullName>
    <label>Document No</label>
    <length>30</length>
    <type>Text</type>
</CustomField>