force-app/main/default/objects/Donation__c/fields/Donation_Type_Description__c.field-meta.xml
<CustomField>
    <fullName>Donation_Type_Description__c</fullName>
    <label>Donation Type Description</label>
    <type>TextArea</type>
</CustomField>