force-app/main/default/objects/Donation__c/fields/Final_Approver__c.field-meta.xml
<CustomField>
    <fullName>Final_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Final Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DonationsPRKA</relationshipName>
    <type>Lookup</type>
</CustomField>