force-app/main/default/objects/Donation__c/fields/Focus_Area__c.field-meta.xml
<CustomField>
    <fullName>Focus_Area__c</fullName>
    <label>Focus Area</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Health for all - Child Health</fullName>
            </value>
            <value>
                <fullName>Health for all - Reproductive Health (Contraception)</fullName>
            </value>
            <value>
                <fullName>Health for all - Self care and access to health programs for vulnerable groups in LMIC</fullName>
            </value>
            <value>
                <fullName>Health for all - Public Health</fullName>
            </value>
            <value>
                <fullName>Climate Change</fullName>
            </value>
            <value>
                <fullName>Biodiversity</fullName>
            </value>
            <value>
                <fullName>Water Management</fullName>
            </value>
            <value>
                <fullName>Waste Management</fullName>
            </value>
            <value>
                <fullName>Hunger for none - Food security, food loss, food quality</fullName>
            </value>
            <value>
                <fullName>Hunger for none - Food availability (vulnerable groups)</fullName>
            </value>
            <value>
                <fullName>Science for a Better Life -  Support of frontier research in the life sciences, data science and environmental sciences</fullName>
            </value>
            <value>
                <fullName>Science for a Better Life -  Development of science talents</fullName>
            </value>
            <value>
                <fullName>Science for a Better Life -  Supporting education programs in the Life Sciences, environmental science and data science</fullName>
            </value>
            <value>
                <fullName>Science for a Better Life -  Science and Society</fullName>
            </value>
            <value>
                <fullName>Others (Exceptional)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>