force-app/main/default/objects/Donation__c/fields/Healthcare_Relation__c.field-meta.xml
<CustomField>
    <fullName>Healthcare_Relation__c</fullName>
    <label>Healthcare Relation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>