force-app/main/default/objects/Donation__c/fields/Healthcare_Relation_Description__c.field-meta.xml
<CustomField>
    <fullName>Healthcare_Relation_Description__c</fullName>
    <defaultValue>&quot;Is the recipient a HealthCare Professional, a HealthCare Organization or a patient organization? If yes, have you aligned the request with your responsible Code Compliance Officer?&quot;</defaultValue>
    <label>Healthcare Relation Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>