force-app/main/default/objects/Donation__c/fields/Id_Donation_Info_Requestor__c.field-meta.xml
<CustomField>
    <fullName>Id_Donation_Info_Requestor__c</fullName>
    <formula>IF( ISPICKVAL( Organization_Type__c , &quot;HCO&quot;) , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Id Donation Info Requestor</label>
    <type>Checkbox</type>
</CustomField>