force-app/main/default/objects/Donation__c/fields/Is_Valid_User__c.field-meta.xml
<CustomField>
    <fullName>Is_Valid_User__c</fullName>
    <description>Internal field used to validate if user is authorized to Submit for approval and Cancel the Donation request. Returns true if current user is either Requestor or Owner of Donation.</description>
    <formula>OR(
 $User.Id =  Requestor__c , 
 $User.Id = OwnerId 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Valid User</label>
    <type>Checkbox</type>
</CustomField>