force-app/main/default/objects/Donation__c/fields/Organization_Type__c.field-meta.xml
<CustomField>
    <fullName>Organization_Type__c</fullName>
    <label>Organization Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agency</fullName>
            </value>
            <value>
                <fullName>HCO</fullName>
            </value>
            <value>
                <fullName>Med. Institute</fullName>
            </value>
            <value>
                <fullName>Health Organization</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>