force-app/main/default/objects/Donation__c/fields/Origin_of_Funding__c.field-meta.xml
<CustomField>
    <fullName>Origin_of_Funding__c</fullName>
    <inlineHelpText>Applicant ensures that the donation is included in the donation budget</inlineHelpText>
    <label>Origin of Funding</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Divisional budget</fullName>
            </value>
            <value>
                <fullName>PS Site Budget</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>