force-app/main/default/objects/Donation__c/fields/Overall_Net_Amount__c.field-meta.xml
<CustomField>
    <fullName>Overall_Net_Amount__c</fullName>
    <label>Overall Net Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>