force-app/main/default/objects/Donation__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <inlineHelpText>Must include Country code + Phone number. For instance: +49123456789</inlineHelpText>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>