force-app/main/default/objects/Donation__c/fields/Political_Affiliations__c.field-meta.xml
<CustomField>
    <fullName>Political_Affiliations__c</fullName>
    <label>Political Affiliations</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>