force-app/main/default/objects/Donation__c/fields/Political_Affiliations_Description__c.field-meta.xml
<CustomField>
    <fullName>Political_Affiliations_Description__c</fullName>
    <defaultValue>&quot;Is the recipient an organization closely affiliated to a political party? If yes, provide a specific reason for the donation and an explanation on the appropriateness, e.g. the absence of an influence of the donation on the political par. Check by Compliance Manager required&quot;</defaultValue>
    <label>Political Affiliations Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>