force-app/main/default/objects/Donation__c/fields/Purpose_of_Donation__c.field-meta.xml
<CustomField>
    <fullName>Purpose_of_Donation__c</fullName>
    <inlineHelpText>Detailed description of the beneficiary project that Bayer would like to support with this donation.</inlineHelpText>
    <label>Purpose of Donation</label>
    <length>512</length>
    <type>LongTextArea</type>
</CustomField>