force-app/main/default/objects/Donation__c/fields/Recipient_Acknowledgment__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Acknowledgment__c</fullName>
    <label>Recipient Acknowledgment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>