force-app/main/default/objects/Donation__c/fields/Recipient_Acknowledgment_Description__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Acknowledgment_Description__c</fullName>
    <defaultValue>&quot;Handelt es sich bei dem Empfänger um eine in Deutschland formell und rechtlich anerkannte Institutionen, die zur Annahme einer Spende berechtigt ist?&quot;</defaultValue>
    <label>Recipient Acknowledgment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>