force-app/main/default/objects/Donation__c/fields/Recipient_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Recommendation__c</fullName>
    <label>Recipient Recommendation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>