force-app/main/default/objects/Donation__c/fields/Recipient_Recommendation_Description__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Recommendation_Description__c</fullName>
    <defaultValue>&quot;Did a governmental official or contracting partner of Bayer recommend or propose the recipient? If yes check by Compliance Manager required.&quot;</defaultValue>
    <label>Recipient Recommendation Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>