force-app/main/default/objects/Donation__c/fields/Recipient_Reputation__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Reputation__c</fullName>
    <label>Recipient Reputation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>