force-app/main/default/objects/Donation__c/fields/Recipient_Reputation_Description__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Reputation_Description__c</fullName>
    <defaultValue>&quot;To the best of your knowledge, does the recipient have a reputation linked to corruption or is it the subject of credible rumors or media reports involving bribery, corruption, inappropriate payments or other questionable conduct? If yes, check by Compliance Manager required.&quot;</defaultValue>
    <label>Recipient Reputation Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>