force-app/main/default/objects/Donation__c/fields/Recipient_Selection__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Selection__c</fullName>
    <label>Recipient Selection</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>