force-app/main/default/objects/Donation__c/fields/Recipient_Selection_Description__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Selection_Description__c</fullName>
    <defaultValue>&quot;Are there comprehensible reasons for the selection of the recipient? Did you consider other entities as recipients? In case of an NGO, is the NGO formally established and legally recognized in the home country?&quot;</defaultValue>
    <label>Recipient Selection Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>