force-app/main/default/objects/Donation__c/fields/Recipient_Stakeholders__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Stakeholders__c</fullName>
    <label>Recipient Stakeholders</label>
    <length>255</length>
    <type>Text</type>
</CustomField>