force-app/main/default/objects/Donation__c/fields/Recipient_Stakeholders_Description__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Stakeholders_Description__c</fullName>
    <defaultValue>&quot;Is the recipient or one of the recipient’s key directors or owners a governmental official or another person (e.g. an employee of a customer of Bayer) having authority over approvals or other decisions relevant to Bayer? If yes, please provide an explanation how it is ensured that the donation does not inappropriately influence a respective decision to be taken. Check by Compliance Manager&quot;</defaultValue>
    <label>Recipient Stakeholders Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>