force-app/main/default/objects/Donation__c/fields/Request_Id__c.field-meta.xml
<CustomField>
    <fullName>Request_Id__c</fullName>
    <formula>&quot;DON-&quot;+TEXT(YEAR(DATEVALUE(CreatedDate )))+ &quot;-&quot; +Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Request Id</label>
    <type>Text</type>
</CustomField>