force-app/main/default/objects/Donation__c/fields/SBR_Bayer_Vital__c.field-meta.xml
<CustomField>
    <fullName>SBR_Bayer_Vital__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SBR Bayer Vital</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DonationsP5ZV</relationshipName>
    <type>Lookup</type>
</CustomField>