force-app/main/default/objects/Donation__c/fields/Title_Account__c.field-meta.xml
<CustomField>
    <fullName>Title_Account__c</fullName>
    <label>Title</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dipl. Med</fullName>
            </value>
            <value>
                <fullName>Dr.</fullName>
            </value>
            <value>
                <fullName>Prof. Dr.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>