force-app/main/default/objects/Donation__c/fields/Translation_of_Purpose_of_Donation__c.field-meta.xml
<CustomField>
    <fullName>Translation_of_Purpose_of_Donation__c</fullName>
    <label>Translation of Purpose of Donation</label>
    <length>512</length>
    <type>LongTextArea</type>
</CustomField>