force-app/main/default/objects/Donation__c/validationRules/IBAN_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>IBAN_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(OR(
   REGEX(IBAN__c, &quot;^BE[0-9]{14}$&quot;),
   REGEX(IBAN__c, &quot;^BG[0-9]{2}[A-Z]{4}[0-9]{14}$&quot;),
   REGEX(IBAN__c, &quot;^DK[0-9]{16}$&quot;),
   REGEX(IBAN__c, &quot;^DE[0-9]{20}$&quot;),
   REGEX(IBAN__c, &quot;^EE[0-9]{18}$&quot;),
   REGEX(IBAN__c, &quot;^FO[0-9]{16}$&quot;),
   REGEX(IBAN__c, &quot;^FI[0-9]{16}$&quot;),
   REGEX(IBAN__c, &quot;^FR[0-9]{25}$&quot;),
   REGEX(IBAN__c, &quot;^GI[0-9]{2}[A-Z]{4}[0-9]{15}$&quot;),
   REGEX(IBAN__c, &quot;^GR[0-9]{25}$&quot;),
   REGEX(IBAN__c, &quot;^GL[0-9]{16}$&quot;),
   REGEX(IBAN__c, &quot;^GB[0-9]{2}[A-Z]{4}[0-9]{14}$&quot;),
   REGEX(IBAN__c, &quot;^IE[0-9]{2}[A-Z]{4}[0-9]{14}$&quot;),
   REGEX(IBAN__c, &quot;^IS[0-9]{24}$&quot;),
   REGEX(IBAN__c, &quot;^IT[0-9]{2}[A-Z]{1}[0-9]{22}$&quot;),
   REGEX(IBAN__c, &quot;^HR[0-9]{19}$&quot;),
   REGEX(IBAN__c, &quot;^LV[0-9]{2}[A-Z]{4}[0-9]{13}$&quot;),
   REGEX(IBAN__c, &quot;^LI[0-9]{19}$&quot;),
   REGEX(IBAN__c, &quot;^LT[0-9]{18}$&quot;),
   REGEX(IBAN__c, &quot;^LU[0-9]{18}$&quot;),
   REGEX(IBAN__c, &quot;^MT[0-9]{2}[A-Z]{4}[0-9]{23}$&quot;),
   REGEX(IBAN__c, &quot;^MC[0-9]{22}[A-Z]{1}[0-9]{2}$&quot;),
   REGEX(IBAN__c, &quot;^NL[0-9]{2}[A-Z]{4}[0-9]{10}$&quot;),
   REGEX(IBAN__c, &quot;^NO[0-9]{13}$&quot;),
   REGEX(IBAN__c, &quot;^AT[0-9]{18}$&quot;),
   REGEX(IBAN__c, &quot;^PL[0-9]{26}$&quot;),
   REGEX(IBAN__c, &quot;^PT[0-9]{23}$&quot;),
   REGEX(IBAN__c, &quot;^RO[0-9]{2}[A-Z]{4}[0-9]{3}[A-Z]{2}[0-9]{11}$&quot;),
   REGEX(IBAN__c, &quot;^SM[0-9]{2}[A-Z]{1}[0-9]{22}$&quot;),
   REGEX(IBAN__c, &quot;^SE[0-9]{22}$&quot;),
   REGEX(IBAN__c, &quot;^CH[0-9]{18}[A-Z]{1}$&quot;),
   REGEX(IBAN__c, &quot;^SK[0-9]{22}$&quot;),
   REGEX(IBAN__c, &quot;^SI[0-9]{17}$&quot;),
   REGEX(IBAN__c, &quot;^ES[0-9]{22}$&quot;),
   REGEX(IBAN__c, &quot;^CZ[0-9]{22}$&quot;),
   REGEX(IBAN__c, &quot;^HU[0-9]{26}$&quot;),
   REGEX(IBAN__c, &quot;^CY[0-9]{26}$&quot;)
   ))</errorConditionFormula>
    <errorDisplayField>IBAN__c</errorDisplayField>
    <errorMessage>Please enter correct format</errorMessage>
</ValidationRule>