force-app/main/default/objects/Donation__c/validationRules/Phone_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(OR(ISBLANK(Phone__c ),REGEX( Phone__c , &quot;^[+](?:[0-9()-]\\s?){6,14}[0-9]{1}+$&quot;)))</errorConditionFormula>
    <errorDisplayField>Phone__c</errorDisplayField>
    <errorMessage>Please add the phone in the correct format</errorMessage>
</ValidationRule>